appId: com.timmyjose.maestrocidemo
--- 
- launchApp:
    clearState: true
- startRecording: basic_android
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          when:
            visible: '.*Quickstep.*responding.*'
          commands:
            - tapOn: 'Wait'
      - waitForAnimationToEnd
- waitForAnimationToEnd
- runFlow:
    when:
      visible: '.*http://10\.0\.2\.2.*'
    commands:
      - tapOn:
          text: '.*http://10\.0\.2\.2.*'
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          when:
            visible: '.*Quickstep.*responding.*'
          commands:
            - tapOn: 'Wait'
      - runFlow:
          when:
            visible: '.*This is the developer menu.*'
          commands:
            - swipe:
                direction: DOWN
      - waitForAnimationToEnd
      - extendedWaitUntil:
          visible:
            id: home-view
          timeout: 60000
      - assertVisible:
          id: 'home-view'
- assertVisible:
    id: 'home-pressable-calculator'
- tapOn:
    id: 'home-pressable-calculator'
- assertVisible:
    id: 'first-number-input'
- tapOn:
    id: 'first-number-input'
- inputText:
    text: '12'
- assertVisible:
    id: 'second-number-input'
- tapOn:
    id: 'second-number-input'
- inputText:
    text: '2'
- assertVisible:
    id: 'add-button'
- tapOn:
    id: 'add-button'
- assertVisible:
    text: 'Result: 14'
- assertVisible:
    id: 'sub-button'
- tapOn:
    id: 'sub-button'
- assertVisible:
    text: 'Result: 10'
- assertVisible:
    id: 'mul-button'
- tapOn:
    id: 'mul-button'
- assertVisible:
    text: 'Result: 24'
- assertVisible:
    id: 'div-button'
- tapOn:
    id: 'div-button'
- assertVisible:
    text: 'Result: 6'
- assertVisible:
    id: 'home-button'
- tapOn:
    id: 'home-button'
- takeScreenshot:
    path: App
    label: Screenshot of the App landing page
- stopRecording
- stopApp: com.timmyjose.maestrocidemo
